--- a/jupyter/Contracheque BB.ipynb
+++ b/jupyter/Contracheque BB.ipynb
@@ -109,7 +109,7 @@
     "        e.acerto DESC\n",
     "\"\"\"\n",
     "\n",
-    "df_mes = pd.read_sql(sql=stmt, con=engine)\n",
+    "df_mes = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
     "df_mes[\"período\"] = pd.to_datetime(df_mes[\"período\"], format=\"%Y%m\").dt.strftime(\"%B de %Y\")\n",
     "df_mes"
    ],
@@ -197,7 +197,7 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "ano = 2005\n",
+    "ano = 2024\n",
     "\n",
     "plt.figure(figsize=(16, 6))\n",
     "plt.style.use(\"ggplot\")\n",
