--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -41,7 +41,8 @@
   {
    "cell_type": "code",
    "source": [
-    "df_sorted = pd.read_sql(sql=\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\", con=engine)\n",
+    "df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\"), con=engine)\n",
+    "\n",
     "df_sorted.columns = [\"Código\", \"Curso\", \"Horas\"]\n",
     "df_sorted"
    ],
@@ -61,7 +62,8 @@
     "        SELECT nm_curso FROM unibb GROUP BY nm_curso HAVING COUNT(nm_curso) > 1\n",
     "    ) ORDER BY nm_curso, id_curso\n",
     "\"\"\"\n",
-    "df_duplicate = pd.read_sql(sql=stmt, con=engine)\n",
+    "df_duplicate = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "\n",
     "df_duplicate.columns = [\"Código\", \"Curso\", \"Horas\"]\n",
     "df_duplicate"
    ],
