--- a/jupyter/Entendendo Geral.ipynb
+++ b/jupyter/Entendendo Geral.ipynb
@@ -98,8 +98,8 @@
    },
    "cell_type": "code",
    "source": [
-    "path_json = \"../src/dados_empresaA.json\"\n",
-    "path_csv = \"../src/dados_empresaB.csv\"\n",
+    "path_json = \"./src/dados_empresaA.json\"\n",
+    "path_csv = \"./src/dados_empresaB.csv\"\n",
     "\n",
     "# extrair\n",
     "dados_empresaA = Dados.leitura_dados(path_json, \"json\")\n",
@@ -124,7 +124,7 @@
     "print(dados_fusao.qtd_linhas)\n",
     "\n",
     "# carregar\n",
-    "path_dados_combinados = \"../src/dados_combinados.csv\"\n",
+    "path_dados_combinados = \"./src/dados_combinados.csv\"\n",
     "dados_fusao.salvando_dados(path_dados_combinados)\n",
     "print(path_dados_combinados)\n",
     "\n",
@@ -157,7 +157,7 @@
     "\n",
     "# salvando dados\n",
     "# dados_fusao_tabela = transformando_dados_tabela(dados_fusao, nome_colunas_fusao)\n",
-    "# path_dados_combinados = \"../src/dados_combinados.csv\"\n",
+    "# path_dados_combinados = \"./src/dados_combinados.csv\"\n",
     "# salvando_dados(dados_fusao_tabela, path_dados_combinados)\n",
     "# print(path_dados_combinados)"
    ],
@@ -259,7 +259,7 @@
     "ws[\"A2\"] = datetime.now()\n",
     "\n",
     "# save the file\n",
-    "wb.save(\"../src/sample.xlsx\")"
+    "wb.save(\"./src/sample.xlsx\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -548,14 +548,14 @@
     "\n",
     "\n",
     "# def responde(arquivo):\n",
-    "#     playsound(\"../src/\" + arquivo + \".mp3\")\n",
+    "#     playsound(\"./src/\" + arquivo + \".mp3\")\n",
     "\n",
     "\n",
     "# def cria_audio(mensagem):\n",
     "#     tts = gTTS(mensagem, lang=\"pt-br\")\n",
-    "#     tts.save(\"../src/mensagem.mp3\")\n",
+    "#     tts.save(\"./src/mensagem.mp3\")\n",
     "#     print(\"ROSIE: \", mensagem)\n",
-    "#     playsound(\"../src/mensagem.mp3\")\n",
+    "#     playsound(\"./src/mensagem.mp3\")\n",
     "\n",
     "\n",
     "# def executa_comandos(trigger):\n",
@@ -710,7 +710,7 @@
     "# video = YouTube(\"https://www.youtube.com/watch?v=D_25fG8ipi8\")\n",
     "# stream = video.streams.first()\n",
     "# stream = video.streams.get_highest_resolution()\n",
-    "# stream.download(\"../img/\")"
+    "# stream.download(\"./img/\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -730,9 +730,9 @@
    "source": [
     "from PIL import Image\n",
     "\n",
-    "img = Image.open(\"../img/grafico.png\")\n",
+    "img = Image.open(\"./img/grafico.png\")\n",
     "black_white = img.convert(\"L\")\n",
-    "black_white.save(\"../img/new_grafico.png\")\n",
+    "black_white.save(\"./img/new_grafico.png\")\n",
     "black_white.show()"
    ],
    "outputs": [],
@@ -835,7 +835,7 @@
     "        print(\"*************************************\\n\")\n",
     "\n",
     "    def carrega_fruta_secreta():\n",
-    "        with open(\"../src/frutas.txt\") as arq:\n",
+    "        with open(\"./src/frutas.txt\") as arq:\n",
     "            fruta = [linha.strip() for linha in arq]\n",
     "        return fruta[random.randrange(0, len(fruta))].upper()\n",
     "\n",
@@ -1065,7 +1065,7 @@
     "# img = qr.make_image(fill_color=\"black\", back_color=\"white\")\n",
     "\n",
     "# salva a imagem em um arquivo PNG\n",
-    "# img.save(\"../img/qr_code.png\")"
+    "# img.save(\"./img/qr_code.png\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -1182,7 +1182,7 @@
     "    if arquivo.endswith(\".pdf\"):\n",
     "        merger.append(f\"doc/{arquivo}\")\n",
     "\n",
-    "merger.write(\"../doc/hashProgramação.pdf\")"
+    "merger.write(\"./doc/hashProgramação.pdf\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -1204,11 +1204,11 @@
     "\n",
     "# captura a tela inteira\n",
     "# screenshot = pyautogui.screenshot()\n",
-    "# screenshot.save(\"../img/screenshot.png\")\n",
+    "# screenshot.save(\"./img/screenshot.png\")\n",
     "\n",
     "# captura a tela específica\n",
     "# screenshot = pyautogui.screenshot(region=(0, 0, 500, 300))\n",
-    "# screenshot.save(\"../img/screenshot_2.png\")"
+    "# screenshot.save(\"./img/screenshot_2.png\")"
    ],
    "outputs": [],
    "execution_count": null
@@ -1266,7 +1266,7 @@
     "# pygame.init()\n",
     "\n",
     "# # carrega a música\n",
-    "# pygame.mixer.music.load(\"../src/minhamusica.mp3\")\n",
+    "# pygame.mixer.music.load(\"./src/minhamusica.mp3\")\n",
     "\n",
     "# # toca a música\n",
     "# pygame.mixer.music.play()\n",
@@ -2250,7 +2250,7 @@
     "# determina saber qual encode configura o arquivo binário\n",
     "# import chardet\n",
     "\n",
-    "# with open(\"../src/aluguel.csv\", \"rb\") as filename:\n",
+    "# with open(\"./src/aluguel.csv\", \"rb\") as filename:\n",
     "#     print(chardet.detect(filename.read()))"
    ],
    "outputs": [],
