--- a/jupyter/Estudo de Pandas.ipynb
+++ b/jupyter/Estudo de Pandas.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "xml_ = pd.read_xml(\"../src/nfse_08644821002035_41462_41059_3_enviada.xml\")\n",
+    "xml_ = pd.read_xml(\"./src/nfse_08644821002035_41462_41059_3_enviada.xml\")\n",
     "\n",
     "xml_"
    ],
@@ -118,7 +118,7 @@
     "import pandas as pd\n",
     "\n",
     "# exibe os nomes de abas\n",
-    "pd.ExcelFile(\"../src/<filename_xlsx>\").sheet_names"
+    "pd.ExcelFile(\"./src/<filename_xlsx>\").sheet_names"
    ],
    "outputs": [],
    "execution_count": null
@@ -222,7 +222,7 @@
     "print(mondays)\n",
     "print(f\"Entre {start:%m/%Y} e {end:%m/%Y} existem {len(mondays)} segundas-feiras.\")\n",
     "\n",
-    "hours = pd.date_range(start=start, end=end, freq=\"H\")\n",
+    "hours = pd.date_range(start=start, end=end, freq=\"h\")\n",
     "print(hours)\n",
     "print(f\"{start:%B de %Y} possui um total de {len(hours) - 1} horas.\")\n",
     "\n",
