--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "source": [
-    "df_last = pd.read_sql(sql=\"SELECT * FROM megasena\", con=engine)\n",
+    "df_last = pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)\n",
     "\n",
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
@@ -64,7 +64,7 @@
    "cell_type": "code",
    "source": [
     "stmt = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
-    "df_mega_da_virada = pd.read_sql(stmt, con=engine)\n",
+    "df_mega_da_virada = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
     "\n",
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
