--- a/jupyter/Contracheque BB.ipynb
+++ b/jupyter/Contracheque BB.ipynb
@@ -54,7 +54,7 @@
     }
    },
    "source": [
-    "df_releases = pd.read_sql(sql=\"SELECT * FROM lançamento\", con=engine)\n",
+    "df_releases = pd.read_sql(sql=sa.text(\"SELECT * FROM lançamento\"), con=engine)\n",
     "df_releases.columns = [\"Código\", \"Lançamento\"]\n",
     "df_releases"
    ],
@@ -121,7 +121,7 @@
    "id": "726e83d28aec70b6",
    "metadata": {},
    "source": [
-    "ano = 2024\n",
+    "ano = 2023\n",
     "\n",
     "stmt = f\"\"\"\n",
     "    SELECT\n",
@@ -150,7 +150,9 @@
     "df_ano.fillna(value=\"\", inplace=True)\n",
     "df_ano.iloc[-1, 0] = \"Sumário\"\n",
     "df_ano.set_index([\"lançamento\"], inplace=True)\n",
-    "# df_ano.columns = [\"lançamento\", \"jan\", \"fev\", \"mar\", \"abr\", \"mai\", \"jun\", \"jul\", \"ago\", \"set\", \"out\", \"nov\", \"dez\", \"média\", \"total\"]\n",
+    "df_ano.rename(columns={int(f\"{ano}01\"): \"jan\", int(f\"{ano}02\"): \"fev\", int(f\"{ano}03\"): \"mar\", int(f\"{ano}04\"): \"abr\",\n",
+    "                       int(f\"{ano}05\"): \"mai\", int(f\"{ano}06\"): \"jun\", int(f\"{ano}07\"): \"jul\", int(f\"{ano}08\"): \"ago\",\n",
+    "                       int(f\"{ano}09\"): \"set\", int(f\"{ano}10\"): \"out\", int(f\"{ano}11\"): \"nov\", int(f\"{ano}12\"): \"dez\", }, inplace=True)\n",
     "df_ano"
    ],
    "outputs": [],
