--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -23,13 +23,13 @@
    "cell_type": "code",
    "source": [
     "new_curses = [\n",
-    "    {\"id_curso\": 202692, \"nm_curso\": \"Cultura e Métodos Ágeis: pilares para uma imersão avançada\", \"hr_curso\": 8},\n",
+    "    {\"id_curso\": 203146, \"nm_curso\": \"ChatGPT: otimizando a qualidade dos resultados\", \"hr_curso\": 8},\n",
     "]\n",
     "\n",
     "df_inserted = pd.DataFrame(new_curses)\n",
     "\n",
     "rows_inserted = df_inserted.to_sql(name=\"unibb\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {rows_inserted} registros inseridos com sucesso!\")"
+    "print(f\"Foi(ram) {rows_inserted} registro(s) inserido(s) com sucesso!\")"
    ],
    "metadata": {
     "collapsed": false
@@ -41,7 +41,8 @@
   {
    "cell_type": "code",
    "source": [
-    "df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\"), con=engine)\n",
+    "df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb\"), con=engine)\n",
+    "# df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\"), con=engine)\n",
     "\n",
     "df_sorted.columns = [\"Código\", \"Curso\", \"Horas\"]\n",
     "df_sorted"
