--- a/jupyter/Cursos de UNIBB.ipynb
+++ b/jupyter/Cursos de UNIBB.ipynb
@@ -23,7 +23,38 @@
    "cell_type": "code",
    "source": [
     "new_curses = [\n",
-    "    {\"id_curso\": 203146, \"nm_curso\": \"ChatGPT: otimizando a qualidade dos resultados\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 7439, \"nm_curso\": \"Jeito BB de atender empresas - Atendimento Extraordinário\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 10005, \"nm_curso\": \"Visita ao Cliente Agro\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11119, \"nm_curso\": \"Playbook de Vendas: Capitalização\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11120, \"nm_curso\": \"Playbook de Vendas: Consórcio\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11121, \"nm_curso\": \"Playbook de Vendas: Previdência\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11122, \"nm_curso\": \"Playbook de Vendas: Seguro pra Vida\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 11123, \"nm_curso\": \"Playbook de Vendas: Seguro Prestamista\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 12196, \"nm_curso\": \"DE&I para potencializar ambientes de aprendizagem\", \"hr_curso\": 1},\n",
+    "    # {\"id_curso\": 201421, \"nm_curso\": \"Gestão de produtos digitais: Product Discovery\", \"hr_curso\": 6},\n",
+    "    # {\"id_curso\": 201629, \"nm_curso\": \"Integração Contínua: mais qualidade e menos risco no desenvolvimento\", \"hr_curso\": 6},\n",
+    "    # {\"id_curso\": 201718, \"nm_curso\": \"UX: metodologias práticas para designers\", \"hr_curso\": 10},\n",
+    "    # {\"id_curso\": 201799, \"nm_curso\": \"Árvores de Decisão: aprofundando em modelos de Machine Learning\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202191, \"nm_curso\": \"TypeScript parte 2: avançando na linguagem\", \"hr_curso\": 10},\n",
+    "    # {\"id_curso\": 202192, \"nm_curso\": \"TypeScript parte 3: mais técnicas e boas práticas\", \"hr_curso\": 10},\n",
+    "    # {\"id_curso\": 202384, \"nm_curso\": \"UX Writing: escrevendo textos para usuários\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202392, \"nm_curso\": \"React: integrando seu projeto React com APIs\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202423, \"nm_curso\": \"Modelos preditivos em dados: detecção de fraude\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202477, \"nm_curso\": \"RoadMap: como criar e manter o mapa de produto\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202479, \"nm_curso\": \"React: otimizando a performance\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202525, \"nm_curso\": \"Estratégia Omnichannel: aumentando suas vendas\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202608, \"nm_curso\": \"Value Stream Mapping (VSM): conheça o mapeamento de Fluxo de Valor\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202692, \"nm_curso\": \"Cultura e Métodos Ágeis: pilares para uma imersão avançada\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202698, \"nm_curso\": \"Segurança de rede: firewall, WAF e SIEM\", \"hr_curso\": 10},\n",
+    "    # {\"id_curso\": 202704, \"nm_curso\": \"Design da proposta de valor: transformando produtos e serviços\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202716, \"nm_curso\": \"User interface: conceitos de UI para product Designers\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202745, \"nm_curso\": \"Ágil Escalado: conheça frameworks para grandes desenvolvimentos\", \"hr_curso\": 6},\n",
+    "    # {\"id_curso\": 202782, \"nm_curso\": \"Lean-Ágil: expanda horizontes para a organização toda\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202858, \"nm_curso\": \"JAVA: criando a sua primeira aplicação\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 202859, \"nm_curso\": \"UX Design: entenda a área da User Experience\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 203078, \"nm_curso\": \"UX Writing: projetando um chatbot\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 203167, \"nm_curso\": \"Inteligência Artificial e UX: otimize a construção de um produto digital\", \"hr_curso\": 8},\n",
+    "    # {\"id_curso\": 203844, \"nm_curso\": \"dicas práticas de acessibilidade em ambientes de aprendizagem\", \"hr_curso\": 4},\n",
     "]\n",
     "\n",
     "df_inserted = pd.DataFrame(new_curses)\n",
@@ -41,8 +72,7 @@
   {
    "cell_type": "code",
    "source": [
-    "df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb\"), con=engine)\n",
-    "# df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\"), con=engine)\n",
+    "df_sorted = pd.read_sql(sql=sa.text(\"SELECT id_curso, nm_curso, hr_curso FROM unibb ORDER BY id_curso\"), con=engine)\n",
     "\n",
     "df_sorted.columns = [\"Código\", \"Curso\", \"Horas\"]\n",
     "df_sorted"
