--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -28,7 +28,7 @@
    "cell_type": "code",
    "source": [
     "new_games = [\n",
-    "    {\"concurso\": 2745, \"data\": \"2024-07-04\", \"bola1\": 2, \"bola2\": 5, \"bola3\": 7, \"bola4\": 11, \"bola5\": 52, \"bola6\": 57, \"ganhou\": True},\n",
+    "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bola1\": 14, \"bola2\": 17, \"bola3\": 24, \"bola4\": 28, \"bola5\": 36, \"bola6\": 45, \"ganhou\": False},\n",
     "]\n",
     "\n",
     "df_games = pd.DataFrame(new_games)\n",
