--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -26,6 +26,35 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "minhas_apostas = [\n",
+    "    [ 5, 15, 26, 27, 46, 53],  # aposta n.° 1\n",
+    "    [ 3, 12, 19, 20, 45, 47],  # aposta n.° 2\n",
+    "    [ 1, 10, 17, 41, 42, 56],  # aposta n.° 3\n",
+    "    [ 2, 10, 13, 27, 53, 55],  # aposta n.° 4\n",
+    "    [ 6,  7,  8, 11, 43, 56],  # aposta n.° 5\n",
+    "    [ 8, 10, 14, 25, 33, 34],  # aposta n.° 6\n",
+    "    [ 5, 11, 16, 40, 43, 57],  # aposta n.° 7\n",
+    "    [ 4,  5,  8, 13, 17, 38],  # aposta n.° 8\n",
+    "    [13, 24, 32, 49, 51, 60],  # aposta n.° 9\n",
+    "    [11, 16, 19, 43, 58, 60],  # aposta n.° 10\n",
+    "    [ 3,  5, 10, 20, 35, 46],  # aposta n.° 11\n",
+    "    [ 2,  9, 10, 19, 31, 57],  # aposta n.° 12\n",
+    "    [ 4, 18, 20, 21, 39, 57],  # aposta n.° 13\n",
+    "    [ 2, 11, 22, 36, 49, 60],  # aposta n.° 14\n",
+    "    [ 2, 21, 39, 48, 52, 57],  # aposta n.° 15\n",
+    "    [14, 41, 45, 50, 54, 59],  # aposta n.° 16\n",
+    "    [13, 20, 22, 25, 28, 39],  # aposta n.° 17\n",
+    "    [ 1, 16, 21, 34, 49, 54],  # aposta n.° 18\n",
+    "]"
+   ],
+   "id": "480881ece30398a5"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "new_games = [\n",
     "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bola1\": 14, \"bola2\": 17, \"bola3\": 24, \"bola4\": 28, \"bola5\": 36, \"bola6\": 45, \"ganhou\": False},\n",
