--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -26,31 +26,42 @@
   {
    "metadata": {},
    "cell_type": "code",
+   "source": [
+    "lista = \"02 03 04 05 06 07\"\n",
+    "print (\"consta\") if \"08\" in lista else print(\"não consta\")"
+   ],
+   "id": "cce251e63f951354",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "minhas_apostas = [\n",
-    "    [ 5, 15, 26, 27, 46, 53],  # aposta n.° 1\n",
-    "    [ 3, 12, 19, 20, 45, 47],  # aposta n.° 2\n",
-    "    [ 1, 10, 17, 41, 42, 56],  # aposta n.° 3\n",
-    "    [ 2, 10, 13, 27, 53, 55],  # aposta n.° 4\n",
-    "    [ 6,  7,  8, 11, 43, 56],  # aposta n.° 5\n",
-    "    [ 8, 10, 14, 25, 33, 34],  # aposta n.° 6\n",
-    "    [ 5, 11, 16, 40, 43, 57],  # aposta n.° 7\n",
-    "    [ 4,  5,  8, 13, 17, 38],  # aposta n.° 8\n",
-    "    [13, 24, 32, 49, 51, 60],  # aposta n.° 9\n",
-    "    [11, 16, 19, 43, 58, 60],  # aposta n.° 10\n",
-    "    [ 3,  5, 10, 20, 35, 46],  # aposta n.° 11\n",
-    "    [ 2,  9, 10, 19, 31, 57],  # aposta n.° 12\n",
-    "    [ 4, 18, 20, 21, 39, 57],  # aposta n.° 13\n",
-    "    [ 2, 11, 22, 36, 49, 60],  # aposta n.° 14\n",
-    "    [ 2, 21, 39, 48, 52, 57],  # aposta n.° 15\n",
-    "    [14, 41, 45, 50, 54, 59],  # aposta n.° 16\n",
-    "    [13, 20, 22, 25, 28, 39],  # aposta n.° 17\n",
-    "    [ 1, 16, 21, 34, 49, 54],  # aposta n.° 18\n",
+    "    [\"05 15 26 27 46 53\"],  # aposta n.° 1\n",
+    "    [\"03 12 19 20 45 47\"],  # aposta n.° 2\n",
+    "    [\"01 10 17 41 42 56\"],  # aposta n.° 3\n",
+    "    [\"02 10 13 27 53 55\"],  # aposta n.° 4\n",
+    "    [\"06 07 08 11 43 56\"],  # aposta n.° 5\n",
+    "    [\"08 10 14 25 33 34\"],  # aposta n.° 6\n",
+    "    [\"05 11 16 40 43 57\"],  # aposta n.° 7\n",
+    "    [\"04 05 08 13 17 38\"],  # aposta n.° 8\n",
+    "    [\"13 24 32 49 51 60\"],  # aposta n.° 9\n",
+    "    [\"11 16 19 43 58 60\"],  # aposta n.° 10\n",
+    "    [\"03 05 10 20 35 46\"],  # aposta n.° 11\n",
+    "    [\"02 09 10 19 31 57\"],  # aposta n.° 12\n",
+    "    [\"04 18 20 21 39 57\"],  # aposta n.° 13\n",
+    "    [\"02 11 22 36 49 60\"],  # aposta n.° 14\n",
+    "    [\"02 21 39 48 52 57\"],  # aposta n.° 15\n",
+    "    [\"14 41 45 50 54 59\"],  # aposta n.° 16\n",
+    "    [\"13 20 22 25 28 39\"],  # aposta n.° 17\n",
+    "    [\"01 16 21 34 49 54\"],  # aposta n.° 18\n",
     "]"
    ],
-   "id": "480881ece30398a5"
+   "id": "3b0f4f6ada8097cc",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -76,9 +87,10 @@
     "\n",
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_last[df_last.columns[2:-1]] = df_last[df_last.columns[2:-1]].map(lambda x: f\"{x:02}\")\n",
-    "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Sim\", \"Não\")\n",
-    "df_last.columns = [\"Concurso\", \"Data\", \"Bola 1\", \"Bola 2\", \"Bola 3\", \"Bola 4\", \"Bola 5\", \"Bola 6\", \"Ganhou?\"]\n",
+    "df_last[\"bolas\"] = df_last[df_last.columns[2:-1]].apply(lambda x: \" \".join(x.astype(str).str.zfill(2)), axis=1)\n",
+    "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
+    "df_last = df_last[[\"concurso\", \"data\", \"bolas\", \"ganhou\"]]\n",
+    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Bolada?\"]\n",
     "\n",
     "df_last.tail(15)"
    ],
@@ -98,9 +110,11 @@
     "\n",
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_mega_da_virada[df_mega_da_virada.columns[2:-1]] = df_mega_da_virada[df_mega_da_virada.columns[2:-1]].map(lambda x: f\"{x:02}\")\n",
-    "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Sim\", \"Não\")\n",
-    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bola 1\", \"Bola 2\", \"Bola 3\", \"Bola 4\", \"Bola 5\", \"Bola 6\", \"Ganhou?\"]\n",
+    "df_mega_da_virada[\"bolas\"] = df_mega_da_virada[df_mega_da_virada.columns[2:-1]].apply(lambda x: \" \".join(x.astype(str).str.zfill(2)), axis=1)\n",
+    "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
+    "df_mega_da_virada.drop([\"bola1\", \"bola2\", \"bola3\", \"bola4\", \"bola5\", \"bola6\"], axis=1, inplace=True)\n",
+    "df_mega_da_virada = df_mega_da_virada[[\"concurso\", \"data\", \"bolas\", \"ganhou\"]]\n",
+    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Bolada?\"]\n",
     "\n",
     "df_mega_da_virada"
    ],
