--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -27,8 +27,38 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "lista = \"02 03 04 05 06 07\"\n",
-    "print (\"consta\") if \"08\" in lista else print(\"não consta\")"
+    "minhas_apostas = [\n",
+    "    \"05 15 26 27 46 53\",  # aposta n.° 1\n",
+    "    \"03 12 19 20 45 47\",  # aposta n.° 2\n",
+    "    \"01 10 17 41 42 56\",  # aposta n.° 3\n",
+    "    \"02 10 13 27 53 55\",  # aposta n.° 4\n",
+    "    \"06 07 08 11 43 56\",  # aposta n.° 5\n",
+    "    \"08 10 14 25 33 34\",  # aposta n.° 6\n",
+    "    \"05 11 16 40 43 57\",  # aposta n.° 7\n",
+    "    \"04 05 08 13 17 38\",  # aposta n.° 8\n",
+    "    \"13 24 32 49 51 60\",  # aposta n.° 9\n",
+    "    \"11 16 19 43 58 60\",  # aposta n.° 10\n",
+    "    \"03 05 10 20 35 46\",  # aposta n.° 11\n",
+    "    \"02 09 10 19 31 57\",  # aposta n.° 12\n",
+    "    \"04 18 20 21 39 57\",  # aposta n.° 13\n",
+    "    \"02 11 22 36 49 60\",  # aposta n.° 14\n",
+    "    \"02 21 39 48 52 57\",  # aposta n.° 15\n",
+    "    \"14 41 45 50 54 59\",  # aposta n.° 16\n",
+    "    \"13 20 22 25 28 39\",  # aposta n.° 17\n",
+    "    \"01 16 21 34 49 54\",  # aposta n.° 18\n",
+    "]"
+   ],
+   "id": "3b0f4f6ada8097cc",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "jogos = \"02 03 04 05 06 07\"\n",
+    "print(\"consta\") if \"02\" in jogos else print(\"não consta\")\n",
+    "print(\"consta\") if \"08\" in jogos else print(\"não consta\")"
    ],
    "id": "cce251e63f951354",
    "outputs": [],
@@ -38,28 +68,36 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "minhas_apostas = [\n",
-    "    [\"05 15 26 27 46 53\"],  # aposta n.° 1\n",
-    "    [\"03 12 19 20 45 47\"],  # aposta n.° 2\n",
-    "    [\"01 10 17 41 42 56\"],  # aposta n.° 3\n",
-    "    [\"02 10 13 27 53 55\"],  # aposta n.° 4\n",
-    "    [\"06 07 08 11 43 56\"],  # aposta n.° 5\n",
-    "    [\"08 10 14 25 33 34\"],  # aposta n.° 6\n",
-    "    [\"05 11 16 40 43 57\"],  # aposta n.° 7\n",
-    "    [\"04 05 08 13 17 38\"],  # aposta n.° 8\n",
-    "    [\"13 24 32 49 51 60\"],  # aposta n.° 9\n",
-    "    [\"11 16 19 43 58 60\"],  # aposta n.° 10\n",
-    "    [\"03 05 10 20 35 46\"],  # aposta n.° 11\n",
-    "    [\"02 09 10 19 31 57\"],  # aposta n.° 12\n",
-    "    [\"04 18 20 21 39 57\"],  # aposta n.° 13\n",
-    "    [\"02 11 22 36 49 60\"],  # aposta n.° 14\n",
-    "    [\"02 21 39 48 52 57\"],  # aposta n.° 15\n",
-    "    [\"14 41 45 50 54 59\"],  # aposta n.° 16\n",
-    "    [\"13 20 22 25 28 39\"],  # aposta n.° 17\n",
-    "    [\"01 16 21 34 49 54\"],  # aposta n.° 18\n",
-    "]"
+    "mega = {k: 0 for k in range(1, 61)}\n",
+    "\n",
+    "for x in minhas_apostas:\n",
+    "    y = x.split()\n",
+    "    for z in range(len(y)):\n",
+    "        mega[int(y[z])] += 1\n",
+    "\n",
+    "print(mega)"
    ],
-   "id": "3b0f4f6ada8097cc",
+   "id": "eaf35584dab273ef",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "mega = {}\n",
+    "\n",
+    "for x in minhas_apostas:\n",
+    "    y = x.split()\n",
+    "    for z in range(len(y)):\n",
+    "        try:\n",
+    "            mega[int(y[z])] += 1\n",
+    "        except KeyError:\n",
+    "            mega[int(y[z])] = 1\n",
+    "\n",
+    "print(mega)"
+   ],
+   "id": "af6dd213e65fe3f3",
    "outputs": [],
    "execution_count": null
   },
@@ -87,8 +125,8 @@
     "\n",
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_last[\"bolas\"] = df_last[df_last.columns[2:-1]].apply(lambda x: \" \".join(x.astype(str).str.zfill(2)), axis=1)\n",
     "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
+    "df_last[\"bolas\"] = df_last[df_last.columns[2:-1]].apply(lambda r: \" \".join(r.astype(str).str.zfill(2)), axis=1)\n",
     "df_last = df_last[[\"concurso\", \"data\", \"bolas\", \"ganhou\"]]\n",
     "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Bolada?\"]\n",
     "\n",
@@ -110,11 +148,10 @@
     "\n",
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_mega_da_virada[\"bolas\"] = df_mega_da_virada[df_mega_da_virada.columns[2:-1]].apply(lambda x: \" \".join(x.astype(str).str.zfill(2)), axis=1)\n",
     "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_mega_da_virada.drop([\"bola1\", \"bola2\", \"bola3\", \"bola4\", \"bola5\", \"bola6\"], axis=1, inplace=True)\n",
+    "df_mega_da_virada[\"bolas\"] = df_mega_da_virada[df_mega_da_virada.columns[2:-1]].apply(lambda r: \" \".join(r.astype(str).str.zfill(2)), axis=1)\n",
     "df_mega_da_virada = df_mega_da_virada[[\"concurso\", \"data\", \"bolas\", \"ganhou\"]]\n",
-    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Bolada?\"]\n",
+    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
     "\n",
     "df_mega_da_virada"
    ],
