--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -56,6 +56,26 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
+    "mega = {\"concurso\": [], \"data\": [], \"bolas\": [], \"ganhou\": []}\n",
+    "\n",
+    "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples():\n",
+    "    for jogo in minhas_apostas:\n",
+    "        if jogo in row.bolas:\n",
+    "            mega[\"concurso\"].append(row.concurso)\n",
+    "            mega[\"data\"].append(row.data)\n",
+    "            mega[\"bolas\"].append(row.bolas)\n",
+    "            mega[\"ganhou\"].append(row.ganhou)\n",
+    "\n",
+    "pd.DataFrame(mega)"
+   ],
+   "id": "9e3b13b363cb4a63",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
     "jogos = \"02 03 04 05 06 07\"\n",
     "print(\"consta\") if \"02\" in jogos else print(\"não consta\")\n",
     "print(\"consta\") if \"08\" in jogos else print(\"não consta\")"
@@ -105,14 +125,14 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "new_games = [\n",
-    "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bola1\": 14, \"bola2\": 17, \"bola3\": 24, \"bola4\": 28, \"bola5\": 36, \"bola6\": 45, \"ganhou\": False},\n",
+    "new = [\n",
+    "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bolas\": \"14 17 24 28 36 45\", \"ganhou\": False},\n",
     "]\n",
     "\n",
-    "df_games = pd.DataFrame(new_games)\n",
+    "df_new = pd.DataFrame(new)\n",
     "\n",
-    "rows_games = df_games.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {rows_games} jogo(s) inserido(s) com sucesso!\")"
+    "rows_inserted = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
+    "print(f\"Foram {rows_inserted} jogo(s) inserido(s) com sucesso!\")"
    ],
    "id": "d5c824bcb6c8517d",
    "outputs": [],
@@ -126,9 +146,7 @@
     "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
     "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_last[\"bolas\"] = df_last[df_last.columns[2:-1]].apply(lambda r: \" \".join(r.astype(str).str.zfill(2)), axis=1)\n",
-    "df_last = df_last[[\"concurso\", \"data\", \"bolas\", \"ganhou\"]]\n",
-    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Bolada?\"]\n",
+    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
     "\n",
     "df_last.tail(15)"
    ],
@@ -149,8 +167,6 @@
     "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
     "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
     "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_mega_da_virada[\"bolas\"] = df_mega_da_virada[df_mega_da_virada.columns[2:-1]].apply(lambda r: \" \".join(r.astype(str).str.zfill(2)), axis=1)\n",
-    "df_mega_da_virada = df_mega_da_virada[[\"concurso\", \"data\", \"bolas\", \"ganhou\"]]\n",
     "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
     "\n",
     "df_mega_da_virada"
