--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -88,23 +88,6 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "mega = {k: 0 for k in range(1, 61)}\n",
-    "\n",
-    "for x in minhas_apostas:\n",
-    "    y = x.split()\n",
-    "    for z in range(len(y)):\n",
-    "        mega[int(y[z])] += 1\n",
-    "\n",
-    "print(mega)"
-   ],
-   "id": "eaf35584dab273ef",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
     "mega = {}\n",
     "\n",
     "for x in minhas_apostas:\n",
@@ -115,7 +98,11 @@
     "        except KeyError:\n",
     "            mega[int(y[z])] = 1\n",
     "\n",
-    "print(mega)"
+    "mega = {k: v for k, v in sorted(mega.items(), key=lambda r: r[0])}\n",
+    "\n",
+    "mega = pd.DataFrame(data=mega, index=[\"acertos\"], columns=mega.keys())\n",
+    "mega.index.name = \"bolas\"\n",
+    "mega"
    ],
    "id": "af6dd213e65fe3f3",
    "outputs": [],
