--- a/jupyter/Megasena.ipynb
+++ b/jupyter/Megasena.ipynb
@@ -27,7 +27,41 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "minhas_apostas = [\n",
+    "new = [\n",
+    "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bolas\": \"14 17 24 28 36 45\", \"ganhou\": False},\n",
+    "]\n",
+    "\n",
+    "df_new = pd.DataFrame(new)\n",
+    "\n",
+    "rows_inserted = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
+    "print(f\"Foram {rows_inserted} jogo(s) inserido(s) com sucesso!\")"
+   ],
+   "id": "d5c824bcb6c8517d",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "df_last = pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)\n",
+    "\n",
+    "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
+    "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
+    "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
+    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
+    "\n",
+    "df_last.tail(15)"
+   ],
+   "id": "f60d41ef17bce170",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "minhas_apostas = (\n",
     "    \"05 15 26 27 46 53\",  # aposta n.° 1\n",
     "    \"03 12 19 20 45 47\",  # aposta n.° 2\n",
     "    \"01 10 17 41 42 56\",  # aposta n.° 3\n",
@@ -46,7 +80,7 @@
     "    \"14 41 45 50 54 59\",  # aposta n.° 16\n",
     "    \"13 20 22 25 28 39\",  # aposta n.° 17\n",
     "    \"01 16 21 34 49 54\",  # aposta n.° 18\n",
-    "]"
+    ")"
    ],
    "id": "3b0f4f6ada8097cc",
    "outputs": [],
@@ -55,20 +89,8 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "mega = {\"concurso\": [], \"data\": [], \"bolas\": [], \"ganhou\": []}\n",
-    "\n",
-    "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples():\n",
-    "    for jogo in minhas_apostas:\n",
-    "        if jogo in row.bolas:\n",
-    "            mega[\"concurso\"].append(row.concurso)\n",
-    "            mega[\"data\"].append(row.data)\n",
-    "            mega[\"bolas\"].append(row.bolas)\n",
-    "            mega[\"ganhou\"].append(row.ganhou)\n",
-    "\n",
-    "pd.DataFrame(mega)"
-   ],
-   "id": "9e3b13b363cb4a63",
+   "source": "pd.read_sql(sql=sa.text(f\"SELECT * FROM megasena WHERE bolas IN {minhas_apostas}\"), con=engine)",
+   "id": "1c57c7504792fe13",
    "outputs": [],
    "execution_count": null
   },
@@ -76,11 +98,68 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "jogos = \"02 03 04 05 06 07\"\n",
-    "print(\"consta\") if \"02\" in jogos else print(\"não consta\")\n",
-    "print(\"consta\") if \"08\" in jogos else print(\"não consta\")"
+    "mega = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Aposta n.°\": [], \"Acertos\": []}\n",
+    "\n",
+    "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
+    "    for aposta in minhas_apostas:\n",
+    "        bolas = aposta.split()\n",
+    "        match = []\n",
+    "        for x in range(6):\n",
+    "            if bolas[x] in row[2]:\n",
+    "                match.append(bolas[x])\n",
+    "        if len(match) >= 4:\n",
+    "            mega[\"Concurso\"].append(str(row[0]).zfill(4))\n",
+    "            mega[\"Data\"].append(pd.to_datetime(row[1]).strftime(\"%x (%a)\"))\n",
+    "            mega[\"Bolas\"].append(\" \".join(match))\n",
+    "            mega[\"Aposta n.°\"].append(minhas_apostas.index(aposta) + 1)\n",
+    "            mega[\"Acertos\"].append(len(match))\n",
+    "\n",
+    "pd.DataFrame(mega)"
    ],
-   "id": "cce251e63f951354",
+   "id": "bad2018beb39e238",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sua_aposta = \"12 14 31 45 50 60\"\n",
+    "\n",
+    "mega = {\"Concurso\": [], \"Data\": [], \"Bolas\": [], \"Acertos\": []}\n",
+    "\n",
+    "for row in pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine).itertuples(index=False, name=None):\n",
+    "    match = []\n",
+    "    for aposta in sua_aposta.split():\n",
+    "        if aposta in row[2]:\n",
+    "            match.append(aposta)\n",
+    "    if len(match) >= 4:\n",
+    "        mega[\"Concurso\"].append(str(row[0]).zfill(4))\n",
+    "        mega[\"Data\"].append(pd.to_datetime(row[1]).strftime(\"%x (%a)\"))\n",
+    "        mega[\"Bolas\"].append(row[2])\n",
+    "        mega[\"Acertos\"].append(len(match))\n",
+    "\n",
+    "pd.DataFrame(mega)"
+   ],
+   "id": "1f1db8022e4e2edb",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "stmt = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
+    "df_mega_da_virada = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
+    "\n",
+    "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
+    "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
+    "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
+    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
+    "\n",
+    "df_mega_da_virada"
+   ],
+   "id": "3b429bb621446a6e",
    "outputs": [],
    "execution_count": null
   },
@@ -105,60 +184,6 @@
     "mega"
    ],
    "id": "af6dd213e65fe3f3",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "new = [\n",
-    "    {\"concurso\": 2747, \"data\": \"2024-07-10\", \"bolas\": \"14 17 24 28 36 45\", \"ganhou\": False},\n",
-    "]\n",
-    "\n",
-    "df_new = pd.DataFrame(new)\n",
-    "\n",
-    "rows_inserted = df_new.to_sql(name=\"megasena\", con=engine, if_exists=\"append\", index=False)\n",
-    "print(f\"Foram {rows_inserted} jogo(s) inserido(s) com sucesso!\")"
-   ],
-   "id": "d5c824bcb6c8517d",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "code",
-   "source": [
-    "df_last = pd.read_sql(sql=sa.text(\"SELECT * FROM megasena\"), con=engine)\n",
-    "\n",
-    "df_last[\"concurso\"] = df_last[\"concurso\"].astype(str).str.zfill(4)\n",
-    "df_last[\"data\"] = pd.to_datetime(df_last[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_last[\"ganhou\"] = np.where(df_last[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_last.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
-    "\n",
-    "df_last.tail(15)"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "f60d41ef17bce170",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": [
-    "stmt = \"SELECT * FROM megasena WHERE data IN (SELECT MAX(data) FROM megasena GROUP BY YEAR(data) HAVING YEAR(data) <> YEAR(CURRENT_DATE))\"\n",
-    "df_mega_da_virada = pd.read_sql(sql=sa.text(stmt), con=engine)\n",
-    "\n",
-    "df_mega_da_virada[\"concurso\"] = df_mega_da_virada[\"concurso\"].astype(str).str.zfill(4)\n",
-    "df_mega_da_virada[\"data\"] = pd.to_datetime(df_mega_da_virada[\"data\"]).dt.strftime(\"%x (%a)\")\n",
-    "df_mega_da_virada[\"ganhou\"] = np.where(df_mega_da_virada[\"ganhou\"], \"Alguém ganhou\", \"Ninguém ganhou\")\n",
-    "df_mega_da_virada.columns = [\"Concurso\", \"Data\", \"Bolas\", \"Ganhou?\"]\n",
-    "\n",
-    "df_mega_da_virada"
-   ],
-   "id": "3b429bb621446a6e",
    "outputs": [],
    "execution_count": null
   }
