--- a/jupyter/Contracheque BB.ipynb
+++ b/jupyter/Contracheque BB.ipynb
@@ -16,7 +16,7 @@
     "locale.setlocale(locale.LC_ALL, \"pt_BR.UTF-8\")\n",
     "locale.setlocale(locale.LC_MONETARY, \"pt_BR.UTF-8\")\n",
     "\n",
-    "pd.set_option(\"display.float_format\", lambda x: locale.currency(x, symbol=False, grouping=True))\n",
+    "pd.set_option(\"display.float_format\", lambda x: locale.currency(val=x, symbol=False, grouping=True, international=False))\n",
     "\n",
     "engine = sa.engine.create_engine(os.getenv(\"URL_MYSQL\"))"
    ],
@@ -72,7 +72,17 @@
    },
    "source": [
     "paychecks = [\n",
-    "    {\"id_lançamento\": 36, \"período\": 202406, \"acerto\": True, \"valor\": -84.31},\n",
+    "    {\"id_lançamento\": 36, \"período\": 202407, \"acerto\": True, \"valor\": -84.31},\n",
+    "    {\"id_lançamento\": 40, \"período\": 202407, \"acerto\": True, \"valor\": -22.4},\n",
+    "    {\"id_lançamento\": 1, \"período\": 202407, \"acerto\": False, \"valor\": 4523.22},\n",
+    "    {\"id_lançamento\": 2, \"período\": 202407, \"acerto\": False, \"valor\": 1258.46},\n",
+    "    {\"id_lançamento\": 26, \"período\": 202407, \"acerto\": False, \"valor\": 2649.73},\n",
+    "    {\"id_lançamento\": 38, \"período\": 202407, \"acerto\": False, \"valor\": -321.23},\n",
+    "    {\"id_lançamento\": 42, \"período\": 202407, \"acerto\": False, \"valor\": -590.19},\n",
+    "    {\"id_lançamento\": 43, \"período\": 202407, \"acerto\": False, \"valor\": -168.62},\n",
+    "    {\"id_lançamento\": 48, \"período\": 202407, \"acerto\": False, \"valor\": -463.71},\n",
+    "    {\"id_lançamento\": 50, \"período\": 202407, \"acerto\": False, \"valor\": -908.86},\n",
+    "    {\"id_lançamento\": 53, \"período\": 202407, \"acerto\": False, \"valor\": -859.75},\n",
     "]\n",
     "\n",
     "df_paychecks = pd.DataFrame(paychecks)\n",
@@ -92,7 +102,7 @@
     }
    },
    "source": [
-    "period = 202406\n",
+    "period = 202407\n",
     "\n",
     "stmt = f\"\"\"\n",
     "    SELECT\n",
@@ -121,7 +131,7 @@
    "id": "726e83d28aec70b6",
    "metadata": {},
    "source": [
-    "ano = 2023\n",
+    "ano = 2024\n",
     "\n",
     "stmt = f\"\"\"\n",
     "    SELECT\n",
